--- a/OniPress/OniPress.html
+++ b/OniPress/OniPress.html
@@ -28,6 +28,7 @@
 <div class="mySlides" style="text-align: center;"><img src="OniPress7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress100.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress12.jpg"></div>
@@ -116,6 +117,8 @@
 <div class="mySlides" style="text-align: center;"><img src="OniPress95.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress96.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OniPress97.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress98.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OniPress99.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -128,22 +131,24 @@ Schreck left the company in 1999, and Oni Press is currently owned by Nozemack, 
 Titles
 </p><p>
 <li><a href="OniPress13.jpg">12 Reasons Why I Love Her</a> (2006)
-<li><a href="OniPress2.jpg">Adventures of Barry Ween, Boy Genius</a> (1999)
+<li><a href="OniPress2.jpg">Adventures Of Barry Ween, Boy Genius</a> (1999)
+<li><a href="OniPress99.jpg">Adventures Of Rheumy Peepers &amp; Chunky Highlights</a> (1999)
 <li><a href="OniPress5.jpg">Aggretsuko</a> (2020)
 <li><a href="OniPress3.jpg">Alabaster Shadows</a> (2015)
-<li><a href="OniPress4.jpg">Alison Dare</a> (2002)
+<li><a href="OniPress4.jpg">Alison Dare And The Heart Of The Maiden</a> (2002)
 <li><a href="OniPress6.jpg">Altered History of Willow Sparks</a> (2018)
-<li><a href="OniPress52.jpg">Angel City</a> (2016)
 <li><a href="OniPress7.jpg">Amado, Cho &amp; Adlard's Nobody</a> (1998)
+<li><a href="OniPress52.jpg">Angel City</a> (2016)
 <li><a href="OniPress8.jpg">Apocalipstix</a> (2008)
 <li><a href="OniPress9.jpg">Atomic City Tales</a> (2002)
+<li><a href="OniPress100.jpg">Atomics: Spaced Out &amp; Grounded In Snap City</a> (2003)
 <li><a href="OniPress11.jpg">Auteur</a> (2014)
 <li><a href="OniPress10.jpg">Awakening</a> (2004)
 <li><a href="OniPress12.jpg">Bad Boy</a> (1999)
 <li><a href="OniPress14.jpg">Bad Machinery</a> (2013)
 <li><a href="OniPress15.jpg">Bad Medicine</a> (2012)
 <li><a href="OniPress16.jpg">Ballad of Sang</a> (2018)
-<li><a href="OniPress17.jpg">Blair Witch Chronicles</a>
+<li><a href="OniPress17.jpg">Blair Witch Chronicles</a> (2000)
 <li><a href="OniPress18.jpg">Blue Monday</a> (2001)
 <li><a href="OniPress19.jpg">Borrowed Time</a> (2006)
 <li><a href="OniPress20.jpg">Breakfast After Noon</a> (2000)
@@ -179,7 +184,7 @@ Titles
 <li><a href="OniPress50.jpg">Letter 44</a> (2013)
 <li><a href="OniPress51.jpg">Local</a> (2005)
 <li><a href="OniPress53.jpg">Long Haul</a> (2005)
-<li><a href="OniPress54.jpg">Lost at Sea</a>
+<li><a href="OniPress54.jpg">Lost at Sea</a> (2003) 
 <li><a href="OniPress55.jpg">Love As A Foreign Language</a> (2006)
 <li><a href="OniPress56.jpg">Love Fights</a> (2003)
 <li><a href="OniPress57.jpg">Madman</a> (2003)
@@ -216,7 +221,7 @@ Titles
 <li><a href="OniPress88.jpg">Spaghetti Western</a> (2004)
 <li><a href="OniPress89.jpg">Spell Checkers</a> (2010)
 <li><a href="OniPress98.jpg">Stephen Colbert's Tek Jansen Adventures</a> (2008)
-<li><a href="../Stumptown/Stumptown.html">Stumptown</a> by Greg Rucka and Matthew Southworth
+<li><a href="../Stumptown/Stumptown.html">Stumptown</a> (2009)
 <li><a href="OniPress90.jpg">Strangetown</a> (2006)
 <li><a href="OniPress91.jpg">Three Days in Europe</a> (2002)
 <li><a href="OniPress92.jpg">Tomb</a> (2004)
