--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 <tr>
 <td>8 1/2 Ghosts</td>
 <td>2004</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -347,7 +347,7 @@
 <tr>
 <td>9-11 Emergency Relief</td>
 <td>2002</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -452,7 +452,7 @@
 <tr>
 <td>23 Skidoo</td>
 <td>2016</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -4096,14 +4096,14 @@
 <tr>
 <td>Alternative Comics</td>
 <td>2003</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Alternative Comics Presents Free Comic Book Day</td>
 <td>2005</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -5802,6 +5802,13 @@
 </tr>
 
 <tr>
+<td>Armor</td>
+<td>1985</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Armor Hunters</td>
 <td>2014</td>
 <td>Valiant</td>
@@ -6574,7 +6581,7 @@
 <tr>
 <td>At The Shore</td>
 <td>2016</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -7904,7 +7911,7 @@
 <tr>
 <td>Barbaka And Black Magic In Morocco - A Graphic Travelog</td>
 <td>2004</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -9224,8 +9231,9 @@
 </tr>
 
 <tr>
-<td>Big Feminist But: Comics About Women, Men And The Ifs, Ands &amp; Buts Of Feminism</td>
+<td>Big Feminist But</td>
 <td>2014</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -9526,7 +9534,7 @@
 <tr>
 <td>Bipolar</td>
 <td>2002</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="Bipolar/Bipolar.html">Details</a></td>
 </tr>
 
@@ -12206,6 +12214,13 @@
 </tr>
 
 <tr>
+<td>Bucky O'Hare</td>
+<td>1986</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bud Wins His Wings</td>
 <td>1956</td>
 <td>Harvey</td>
@@ -13092,6 +13107,13 @@
 <td>1991</td>
 <td>Marvel</td>
 <td><a href="CaptainPlanet/CaptainPlanet.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Power And the Soldiers Of The Future</td>
+<td>1988</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15509,7 +15531,7 @@
 <tr>
 <td>Coexisting</td>
 <td>2005</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -16655,6 +16677,13 @@
 </tr>
 
 <tr>
+<td>Crazyman</td>
+<td>1992</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Creators Syndicate</td>
 <td>1987</td>
 <td>Publisher</td>
@@ -17548,6 +17577,13 @@
 <td>1989</a>
 <td>Eclipse
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cyberad</td>
+<td>1992</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19129,7 +19165,7 @@
 <tr>
 <td>Death In Oaxaca</td>
 <td>2014</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -21934,6 +21970,13 @@
 </tr>
 
 <tr>
+<td>Earth 4</td>
+<td>1993</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Earth Before Us</td>
 <td>2017</td>
 <td>Abrams</td>
@@ -22013,7 +22056,7 @@
 <tr>
 <td>Echo Of Future Past</td>
 <td>1984</td>
-<td>Continuity Comics</td>
+<td>Continuity</td>
 <td><a href="Echo/Echo.html">Details</a></td>
 </tr>
 
@@ -22951,7 +22994,7 @@
 <tr>
 <td>Escalator</td>
 <td>2004</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -24981,7 +25024,7 @@
 <tr>
 <td>Fine Mess</td>
 <td>2002</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -28676,7 +28719,7 @@
 <tr>
 <td>Grickle</td>
 <td>2001</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -30726,7 +30769,7 @@
 <tr>
 <td>Hickee</td>
 <td>2003</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -31097,7 +31140,7 @@
 <tr>
 <td>Horrible Truth About Comics</td>
 <td>1999</td>
-<td>Alternative Comics</td>
+<td>Alternative</td>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -31538,7 +31581,7 @@
 <tr>
 <td>Humor Can Be Funny! Magic Whistle</td>
 <td>2006</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -31638,6 +31681,20 @@
 <td>2007</td>
 <td>Archaia</td>
 <td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hybrids</td>
+<td>1993</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hybrids: The Origin</td>
+<td>1993</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36900,7 +36957,7 @@
 <tr>
 <td>Lemon Kids</td>
 <td>1999</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -38335,7 +38392,7 @@
 <tr>
 <td>Lunch-Hour Comix</td>
 <td>2004</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -38749,7 +38806,7 @@
 <tr>
 <td>Magic Whistle</td>
 <td>1998</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -40329,6 +40386,13 @@
 </tr>
 
 <tr>
+<td>Magalith</td>
+<td>1989</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Megamind</td>
 <td>2010</td>
 <td>Dreamworks</td>
@@ -41744,7 +41808,7 @@
 <tr>
 <td>Monica's Story</td>
 <td>1999</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -42336,6 +42400,13 @@
 </tr>
 
 <tr>
+<td>Ms. Mystic</td>
+<td>1987</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ms. Tree</td>
 <td>1983</td>
 <td>Eclipse</td>
@@ -42884,7 +42955,7 @@
 <tr>
 <td>My Uncle Jeff</td>
 <td>2003</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -44963,7 +45034,7 @@
 <tr>
 <td>Opposable Thumbs</td>
 <td>2001</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -45817,7 +45888,7 @@
 <tr>
 <td>Peanutbutter &amp; Jeremy</td>
 <td>2001</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -47025,7 +47096,7 @@
 <tr>
 <td>Power Of 6</td>
 <td>2006</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -47927,7 +47998,7 @@
 <tr>
 <td>Quit Your Job</td>
 <td>2002</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -47990,7 +48061,7 @@
 <tr>
 <td>Rabbit Head</td>
 <td>2004</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -48473,7 +48544,7 @@
 <tr>
 <td>Red Eye, Black Eye</td>
 <td>2007</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -48978,6 +49049,13 @@
 <td>1988</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Revengers</td>
+<td>1985</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50157,7 +50235,7 @@
 <tr>
 <td>Rubber Necker</td>
 <td>2002</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -50620,6 +50698,13 @@
 <td>1987</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Samuree</td>
+<td>1987</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52078,6 +52163,13 @@
 </tr>
 
 <tr>
+<td>Shaman</td>
+<td>1994</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shaman's Tears</td>
 <td>1993</td>
 <td>Image</td>
@@ -53066,7 +53158,7 @@
 <tr>
 <td>Slasher</td>
 <td>2017</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -53178,7 +53270,7 @@
 <tr>
 <td>Slowpoke Comix</td>
 <td>1998</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -53514,7 +53606,7 @@
 <tr>
 <td>Sort Of Homecoming</td>
 <td>2003</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -55173,7 +55265,7 @@
 <tr>
 <td>Strange Day</td>
 <td>2005</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -56881,7 +56973,7 @@
 <tr>
 <td>Terra Flats</td>
 <td>2016</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -57322,7 +57414,7 @@
 <tr>
 <td>Thunderhead Underground Falls</td>
 <td>2007</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -57532,7 +57624,7 @@
 <tr>
 <td>Titan</td>
 <td>2016</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -57546,7 +57638,7 @@
 <tr>
 <td>Titans Of Finance</td>
 <td>2001</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -57936,6 +58028,13 @@
 </tr>
 
 <tr>
+<td>Toyboy</td>
+<td>1986</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Toyetica</td>
 <td>2017</td>
 <td>Action Lab</td>
@@ -58274,7 +58373,7 @@
 <tr>
 <td>True Porn</td>
 <td>2003</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -58288,7 +58387,7 @@
 <tr>
 <td>True Stories</td>
 <td>2014</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -58309,14 +58408,14 @@
 <tr>
 <td>True Swamp: Stoneground and Hillbound</td>
 <td>2001</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
 <tr>
 <td>True Swamp: Underwoods And Overtime</td>
 <td>2000</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -59352,8 +59451,15 @@
 <tr>
 <td>Urban Hipster</td>
 <td>1998</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Urth 4</td>
+<td>1989</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59436,7 +59542,7 @@
 <tr>
 <td>Vagabonds</td>
 <td>2003</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -59445,6 +59551,13 @@
 <td>2011</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Valeria, She-Bat</td>
+<td>1993</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61599,7 +61712,7 @@
 <tr>
 <td>When I'm Old And Other Stories</td>
 <td>2003</td>
-<td>Alternative Comics</a>
+<td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
 </tr>
 
@@ -63400,6 +63513,13 @@
 <td>2007</td>
 <td>Dark Horse</td>
 <td><a href="ZeroKiller/ZeroKiller.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zero Patrol</td>
+<td>1986</td>
+<td>Continuity</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
