--- a/index.html
+++ b/index.html
@@ -21811,7 +21811,7 @@
 <tr>
 <td>Duncan The Wonder Dog</td>
 <td>2010</td>
-<td>AdHouse Books</td>
+<td>AdHouse</td>
 <td><a href="DuncanTheWonderDog/DuncanTheWonderDog.html">Details</a></td>
 </tr>
 
