--- a/index.html
+++ b/index.html
@@ -3178,6 +3178,13 @@
 </tr>
 
 <tr>
+<td>Alien Bounty Hunter</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alien Encounters</td>
 <td>1985</td>
 <td>Eclipse</td>
@@ -6705,6 +6712,13 @@
 </tr>
 
 <tr>
+<td>Atoll</td>
+<td>2016</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Atom</td>
 <td>1962</td>
 <td>DC</td>
@@ -10126,6 +10140,13 @@
 <td>2013</td>
 <td>Image</td>
 <td><a href="BlackScience/BlackScience.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Stars Above</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15718,6 +15739,13 @@
 </tr>
 
 <tr>
+<td>Colossi</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Columbia Comics</td>
 <td>1940</td>
 <td>Publisher</td>
@@ -17507,6 +17535,20 @@
 <td>1998</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cult Classic: Creature Feature</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cult Classic: Return To Whisper</td>
+<td>2018</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19933,6 +19975,13 @@
 </tr>
 
 <tr>
+<td>Deuce Of Hearts</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deviant</td>
 <td>1999</td>
 <td>Antarctic Press</td>
@@ -20525,6 +20574,13 @@
 <td>1994</td>
 <td>Dark Horse</td>
 <td><a href="Division13/Division13.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dixie Vixens: A Lit Cigarette</td>
+<td>2015</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23979,6 +24035,13 @@
 </tr>
 
 <tr>
+<td>Failsafe</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fair Weatherr</td>
 <td>2002</td>
 <td>Drawn &amp; Quarterly</td>
@@ -25398,6 +25461,13 @@
 </tr>
 
 <tr>
+<td>Fissure</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fistful Of Blood</td>
 <td>2015</td>
 <td>IDW</td>
@@ -26425,6 +26495,13 @@
 <td>1958</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Friendo</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30655,6 +30732,13 @@
 </tr>
 
 <tr>
+<td>Heathen</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Heaven's Door</td>
 <td>2020</td>
 <td>Last Gasp</td>
@@ -33035,6 +33119,13 @@
 </tr>
 
 <tr>
+<td>Interceptor</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Interface</td>
 <td>1989</td>
 <td>Marvel</td>
@@ -35377,6 +35468,13 @@
 <td>2004</td>
 <td>Dark Horse</td>
 <td><a href="Karas/Karas.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Karma Police</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40757,6 +40855,13 @@
 </tr>
 
 <tr>
+<td>Maxwell's Demons</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Maxx</td>
 <td>1993</td>
 <td>Image</td>
@@ -42587,6 +42692,13 @@
 <td>2003</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Money Shot</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47403,6 +47515,13 @@
 </tr>
 
 <tr>
+<td>Plot</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Plume</td>
 <td>2012</td>
 <td>Devil's Due</td>
@@ -47784,6 +47903,13 @@
 <td>2004</td>
 <td>Marvel</td>
 <td><a href="Powerless/Powerless.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Powerless</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49053,6 +49179,13 @@
 </tr>
 
 <tr>
+<td>Reactor</td>
+<td>2018</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Read Only Memories</td>
 <td>2019</td>
 <td>IDW</td>
@@ -49581,6 +49714,13 @@
 <td>1969</td>
 <td>Ralph Records</td>
 <td><a href="Residents/Residents.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Resonant</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52443,6 +52583,13 @@
 </tr>
 
 <tr>
+<td>Sera And The Royal Stars</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Seraphim</td>
 <td>1990</td>
 <td>Innovation</td>
@@ -52895,6 +53042,13 @@
 <td>2018</td>
 <td>DC</td>
 <td><a href="DCComics/DCComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>She Said Destroy</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54241,6 +54395,13 @@
 </tr>
 
 <tr>
+<td>Songs For The Dead</td>
+<td>2018</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Songs Of The Abyss</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -54861,6 +55022,13 @@
 <td>1941</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spiritus</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56397,6 +56565,13 @@
 </tr>
 
 <tr>
+<td>Submerged</td>
+<td>2018</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Submit!</td>
 <td>2007</td>
 <td>Fantagraphics</td>
@@ -57836,6 +58011,13 @@
 <td>1944</td>
 <td>Atlas</td>
 <td><a href="TessieTheTypist/TessieTheTypist.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Test</td>
+<td>2019</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60317,6 +60499,13 @@
 </tr>
 
 <tr>
+<td>Vagrant Queen</td>
+<td>2018</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Valen The Outcast</td>
 <td>2011</td>
 <td>Boom!</td>
@@ -60664,6 +60853,13 @@
 <td>1941</td>
 <td>Creator</td>
 <td><a href="VaughnBode/VaughnBode.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vault Comics</td>
+<td>2016</td>
+<td>Publisher</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64389,6 +64585,13 @@
 <td>2016</td>
 <td>Action Lab</td>
 <td><a href="ActionLab/ActionLab.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zojaqan</td>
+<td>2017</td>
+<td>Vault</td>
+<td><a href="VaultComics/VaultComics.html">Details</a></td>
 </tr>
 
 <tr>
