--- a/index.html
+++ b/index.html
@@ -9315,6 +9315,13 @@
 </tr>
 
 <tr>
+<td>Big Head Press</td>
+<td>2003</td>
+<td>Publisher</td>
+<td><a href="BigHeadPress/BigHeadPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Big Kids</td>
 <td>2016</td>
 <td>Drawn &amp; Quarterly</td>
