--- a/Capstone/Capstone.html
+++ b/Capstone/Capstone.html
@@ -34,27 +34,19 @@ Heinemann-Raintree has offices in Chicago and Oxford, England. Capstone is based
 </p><p>
 Titles
 </p><p>
-<li>20,000 Leagues Under the Sea (2008)
-<li>A Midsummer Night's Dream(2012)
-<li>A Win for Women: Billie Jean King Takes Down Bobby Riggs (2019)
-<li>Adventures of Jellaby (2014)
-<li>Adventures of Tom Sawyer (2007)
-<li>Ali Baba and the Forty Thieves (2011)
-<li>Attack on Pearl Harbor (2006)
-<li>Batman Strikes! (2014)
-<li>Batman The Brave and the Bold (2012)
-<li>Batman: Comic Chapter Books (2015)
-<li>Behind Enemy Lines: The Escape of Robert Grimes with the Comet Line (2017)
-<li>Billy Blaster: Attack of the Rock Men  (2009)
-<li>Billy Blaster: Ice Caves of Pluto (2009)
-<li>Billy Blaster: Mind Thief (2009)
-<li>Billy Blaster: Water Pirates from Outer Space (2009)
-<li>Bram Stoker's Dracula (2008)
-<li>Capstone Presents Mr. Puzzle (2013)
-<li>Courage on the Battlefield: True Stories of Survival in the Military (2016)
-<li>Cryptic Code (2009)
-<li>Curse of King Tut's Tomb (2005)
-<li>Death Camp Uprising: The Escape from Sobibor Concentration Camp (2017)
+<li><a href="Capstone2.jpg">20,000 Leagues Under The Sea</a> (2008)
+<li><a href="Capstone1.jpg">Adventures of Jellaby</a> (2014)
+<li><a href="Capstone3.jpg">Adventures of Tom Sawyer</a> (2007)
+<li><a href="Capstone4.jpg">Ali Baba and the Forty Thieves</a> (2011)
+<li><a href="Capstone6.jpg">Batman Strikes!</a> (2014)
+<li><a href="Capstone7.jpg">Batman The Brave and the Bold</a> (2012)
+<li><a href="Capstone5.jpg">Billy Blaster: Attack of the Rock Men</a>  (2009)
+<li><a href="Capstone8.jpg">Bram Stoker's Dracula</a> (2008)
+<li><a href="Capstone9.jpg">Capstone Presents Mr. Puzzle</a> (2013)
+<li><a href="Capstone10.jpg">Courage on the Battlefield: True Stories of Survival in the Military</a> (2016)
+<li><a href="Capstone11.jpg">Cryptic Code</a> (2009)
+<li><a href="Capstone12.jpg">Curse of King Tut's Tomb</a> (2005)
+<li><a href="Capstone13.jpg">Death Camp Uprising: The Escape from Sobibor Concentration Camp</a> (2017)
 <li>Evil Swarm (2009)
 <li>Exploring Titanic: An Isabel Soto History Adventure (2010)
 <li>Far Out Fairy Tales (2016)
