--- a/index.html
+++ b/index.html
@@ -59596,6 +59596,13 @@
 </tr>
 
 <tr>
+<td>Topps Comics</td>
+<td>1992</td>
+<td>Publisher</td>
+<td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tor</td>
 <td>1975</td>
 <td>DC</td>
